[gd_scene load_steps=6 format=2]

[ext_resource path="res://Inventory/Items/item_slot.png" type="Texture" id=1]
[ext_resource path="res://Inventory/UI/ItemSlot.gd" type="Script" id=2]
[ext_resource path="res://Inventory/Other/ItemSlotDragDrop.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/arcade-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Inventory/Items/item_slot_selected.png" type="Texture" id=5]

[node name="ItemSlot" type="MarginContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
hint_tooltip = "Tooltip"
color = Color( 0.0980392, 0.235294, 0.211765, 1 )
script = ExtResource( 3 )

[node name="Overlay" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotImage" type="TextureRect" parent="Background/Overlay"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotSelected" type="TextureRect" parent="Background/Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="Background/Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StackAmount" type="Label" parent="Background/Overlay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 24.0
margin_right = 8.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.737305, 0.597378, 0.164165, 1 )
text = "....."
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Background" to="." method="_on_gui_input_signal"]
